syntax = "proto3";

package proto;

import "dbsvc/proto/gogo.proto";
import "proto/data.proto";

service DBsvc {
    // Push array of posts to database
    rpc Push (PushRequest) returns (PushReply) {}

    // Select array from database, each element from array belongs the interval
    rpc Select (SelectRequest) returns (SelectReply) {}
}

// The push request contains two parameters.
message PushRequest {
    repeated data.Post posts = 1 [(gogoproto.nullable) = false];
}

message PushReply {
    repeated string ids = 1 [(gogoproto.nullable) = false];
    string err = 2;
}

message SelectRequest {
    data.SpatioTemporalInterval interval = 1 [(gogoproto.nullable) = false];
}

message SelectReply {
    repeated data.Post posts = 1 [(gogoproto.nullable) = false];
    string err = 2;
}